--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Compiled class file
 *.class
+.idea/
 
 # Log file
 *.log
@@ -22,3 +23,24 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+.idea/
+
+# Compiled files
+target/
+build/
+
+# Dependency directories
+bin/
+lib/
+
+# Gradle files
+.gradle/
+
+# Logs and databases
+*.log
+*.log.*
+*.db
+
+# OS-specific files
+.DS_Store
