--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,4 @@ jobs:
       run: mvn -B compile  # Compile the code
 
     - name: Run mock tests
-      run: mvn -B test  # Run mock tests
+      run: mvn -B test  # Run mock test
