--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven
+name: Java 21 CI with Maven
 
 on:
   push:
@@ -8,18 +8,20 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-    - name: Set up JDK 21
-      uses: actions/setup-java@v2
-      with:
-        java-version: '21'
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: 21
 
-    - name: Build with Maven
-      run: mvn -B compile  # Compile the code
+      - name: Compile code
+        run: mvn -B compile
 
-    - name: Run mock tests
-      run: mvn -B test  # Run mock test
+      - name: Run tests
+        run: mvn -B test
