--- a/lecture-scheduler/src/main/resources/application.properties
+++ b/lecture-scheduler/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=lecture-scheduler
 spring.datasource.url=jdbc:mysql://localhost:3306/SchedulerDb?serverTimezone=UTC
 spring.datasource.username=hare32
 spring.datasource.password=1234
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 
