--- a/lecture-scheduler/src/main/resources/application.properties
+++ b/lecture-scheduler/src/main/resources/application.properties
@@ -1,7 +1,16 @@
 spring.application.name=lecture-scheduler
 spring.datasource.url=jdbc:mysql://localhost:3306/SchedulerDb?serverTimezone=UTC
-spring.datasource.username=hare32
-spring.datasource.password=1234
+spring.datasource.username=root
+spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.security.oauth2.client.registration.google.client-id=1075986554465-h89n6mls3cbdqsib3fa2h79ib4m0dg31.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
 
