--- a/lecture-scheduler/src/main/resources/application.properties
+++ b/lecture-scheduler/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=lecture-scheduler
 spring.datasource.url=jdbc:mysql://localhost:3306/SchedulerDb?serverTimezone=UTC
-spring.datasource.username=hare32
+spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=create-drop
 
