--- a/lecture-scheduler/view/package.json
+++ b/lecture-scheduler/view/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.1",
     "bootstrap": "^5.3.3",
+    "jspdf": "^2.5.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
