Email field added to the instructors table. Dependencies for google callendar api added.

--- a/lecture-scheduler/pom.xml
+++ b/lecture-scheduler/pom.xml
@@ -57,6 +57,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-calendar</artifactId>
+			<version>v3-rev411-1.25.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
