--- a/lecture-scheduler/src/main/resources/application.properties
+++ b/lecture-scheduler/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=lecture-scheduler
-spring.datasource.url=jdbc:mysql://localhost:3306/SchedulerDb?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://lecture-scheduler.chqo20g680aq.eu-west-1.rds.amazonaws.com:3306/SchedulerDb
+spring.datasource.username=user
+spring.datasource.password=12345678
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
 spring.security.oauth2.client.registration.google.client-id=1075986554465-h89n6mls3cbdqsib3fa2h79ib4m0dg31.apps.googleusercontent.com
