--- a/lecture-scheduler/src/main/resources/application.properties
+++ b/lecture-scheduler/src/main/resources/application.properties
@@ -2,15 +2,16 @@ spring.application.name=lecture-scheduler
 spring.datasource.url=jdbc:mysql://lecture-scheduler.chqo20g680aq.eu-west-1.rds.amazonaws.com:3306/SchedulerDb
 spring.datasource.username=user
 spring.datasource.password=12345678
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
 spring.security.oauth2.client.registration.google.client-id=1075986554465-h89n6mls3cbdqsib3fa2h79ib4m0dg31.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.scope=openid,profile,email
-spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.scope=openid,profile,email,https://www.googleapis.com/auth/calendar.events
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:3000
+spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
