--- a/lecture-scheduler/src/main/resources/application.properties
+++ b/lecture-scheduler/src/main/resources/application.properties
@@ -7,10 +7,11 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.security.oauth2.client.registration.google.client-id=1075986554465-h89n6mls3cbdqsib3fa2h79ib4m0dg31.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
-spring.security.oauth2.client.registration.google.scope=email,profile,https://www.googleapis.com/auth/calendar
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.scope=email,profile,https://www.googleapis.com/auth/calendar.events
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
 
