--- a/lecture-scheduler/src/main/resources/application.properties
+++ b/lecture-scheduler/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.application.name=lecture-scheduler
-spring.datasource.url=jdbc:mysql://localhost:3306/SchedulerDb?serverTimezone=UTC
-spring.datasource.username=hare32
-spring.datasource.password=1234
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://lecture-scheduler.chqo20g680aq.eu-west-1.rds.amazonaws.com:3306/SchedulerDb
+spring.datasource.username=user
+spring.datasource.password=12345678
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
 spring.security.oauth2.client.registration.google.client-id=1075986554465-h89n6mls3cbdqsib3fa2h79ib4m0dg31.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=https://ec2-3-255-158-231.eu-west-1.compute.amazonaws.com/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.scope=email,profile,https://www.googleapis.com/auth/calendar.events
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
@@ -15,3 +17,8 @@ spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleap
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
 
 
+server.port=443
+server.ssl.key-store=classpath:myapp.p12
+server.ssl.key-store-password=123456
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=myapp
