--- a/lecture-scheduler/view/package.json
+++ b/lecture-scheduler/view/package.json
@@ -43,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "https://ec2-3-255-158-231.eu-west-1.compute.amazonaws.com"
 }
