test 1 - changed pom

--- a/lecture-scheduler/pom.xml
+++ b/lecture-scheduler/pom.xml
@@ -63,6 +63,11 @@
 			<version>v3-rev411-1.25.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.google.auth</groupId>
 			<artifactId>google-auth-library-oauth2-http</artifactId>
 			<version>1.4.0</version>
