--- a/lecture-scheduler/src/test/resources/application-test.properties
+++ b/lecture-scheduler/src/test/resources/application-test.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=hare32
-spring.datasource.password=1234
+spring.datasource.username=root
+spring.datasource.password=123456
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
